cambio de color de fondo

--- a/CSS/administrador-ordenes.css
+++ b/CSS/administrador-ordenes.css
@@ -2,7 +2,8 @@ body {
   margin: 0;
   padding: 0;
   height: 100vh;
-  background-color: #ffd900;
+  /* background-color: #ffd900; */
+  background-color: #fff;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 #container {
@@ -23,4 +24,8 @@ body {
 #opciones {
   height: 70%;
   border-right: 1px solid black;
+}
+
+#formulario {
+  background-color: #eee;
 }
