--- a/CSS/administrador-formulario.css
+++ b/CSS/administrador-formulario.css
@@ -2,12 +2,16 @@ body {
   margin: 0;
   padding: 0;
   height: 100vh;
-  background-color: #ffd900;
+  background-color: #fff;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 #container {
   width: 100%;
   height: 100%;
+}
+#container tr td {
+  vertical-align: middle;
+  /* text-align: center; */
 }
 
 #logo {
@@ -23,4 +27,18 @@ body {
 #opciones {
   height: 70%;
   border-right: 1px solid black;
+}
+
+#formulario {
+  background-color: #eee;
+  /* text-align: left; */
+}
+
+#formulario form {
+  background-color: #fff;
+  border-radius: 0.5em;
+  width: 80%;
+  height: 80%;
+  padding: 1em;
+  margin: 1em;
 }
