--- a/CSS/administrador-formulario.css
+++ b/CSS/administrador-formulario.css
@@ -42,3 +42,21 @@ body {
   padding: 1em;
   margin: 1em;
 }
+#opciones {
+  text-align: center;
+  height: 70%;
+  border-right: 1px solid black;
+}
+
+#opciones table {
+  width: 100%;
+}
+#opciones table tr td {
+  border-bottom: 1px solid gray;
+  margin: 1em;
+  padding: 1em 0;
+}
+
+#elegido {
+  background-color: #ffd900;
+}
