--- a/CSS/index.css
+++ b/CSS/index.css
@@ -11,7 +11,6 @@ body {
 }
 
 #container tr td {
-  vertical-align: middle;
   text-align: center;
 }
 
@@ -20,6 +19,8 @@ body {
   width: 20%;
   border-bottom: 1px solid black;
   border-right: 1px solid black;
+  vertical-align: middle;
+  /* position: fixed; */
 }
 #logo img {
   width: 100%;
@@ -29,14 +30,21 @@ body {
   width: 55%;
   border-right: 1px solid black;
   background-color: #eee;
+  vertical-align: top;
+  /* position: absolute; */
 }
 #carrito {
   height: 100%;
   width: 25%;
+  /* position: fixed; */
 }
 #categorias {
   height: 70%;
+  width: 20%;
   border-right: 1px solid black;
+  vertical-align: middle;
+  /* position: fixed; */
+  /* top: 30%; */
 }
 
 #categorias table {
@@ -46,4 +54,22 @@ body {
   border-bottom: 1px solid gray;
   margin: 1em;
   padding: 1em 0;
+}
+
+#cards {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  padding: 1em;
+  gap: 2rem;
+}
+.card {
+  border: 1px solid black;
+  background-color: #fff;
+  width: 14em;
+  height: 21em;
+}
+.card img {
+  width: 100%;
+  border-bottom: 1px solid black;
 }
