--- a/CSS/administrador-ordenes.css
+++ b/CSS/administrador-ordenes.css
@@ -16,23 +16,18 @@ body {
   width: 20%;
   border-bottom: 1px solid black;
   border-right: 1px solid black;
+  position: static;
 }
 
 #logo img {
   width: 100%;
 }
-#opciones {
-  height: 70%;
-  border-right: 1px solid black;
-}
 
-#formulario {
-  background-color: #eee;
-}
 #opciones {
   text-align: center;
   height: 70%;
   border-right: 1px solid black;
+  position: static;
 }
 
 #opciones table {
@@ -49,4 +44,25 @@ body {
 }
 #opciones table tr td a {
   text-decoration: none;
+}
+
+#ordenes {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 2rem;
+  margin: 1rem;
+  position: absolute;
+  top: 0;
+  width: 78%;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  height: 97vh;
+}
+
+#ordenes div {
+  border: 1px solid black;
+  padding: 1rem;
+  height: 10rem;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
