--- a/CSS/index.css
+++ b/CSS/index.css
@@ -70,11 +70,11 @@ body {
   gap: 2rem;
 }
 .card {
-  border: 1px solid black;
   border-radius: 0.5rem;
   background-color: #fff;
   width: 14em;
   height: 21em;
+  box-shadow: 5px 5px 5px 0 gray;
 }
 
 .card div {
@@ -105,6 +105,11 @@ body {
 
 .card div button {
   width: 50%;
+  background-color: #ffd900;
+  padding: 0.5em;
+  font-weight: bold;
+  border: 1px solid #ffd900;
+  border-radius: 5px;
 }
 
 .card img {
