--- a/CSS/administrador-formulario.css
+++ b/CSS/administrador-formulario.css
@@ -29,22 +29,6 @@ body {
   border-right: 1px solid black;
 }
 
-#formulario {
-  background-color: #eee;
-  /* text-align: left; */
-}
-
-#formulario form {
-  background-color: #fff;
-  border-radius: 0.5em;
-  width: 80%;
-  height: 80%;
-  padding: 1em;
-  margin: 1em;
-}
-#formulario form div {
-  margin: 0.5em 0 1.5em 0;
-}
 #opciones {
   text-align: center;
   height: 70%;
@@ -65,4 +49,82 @@ body {
 
 #elegido {
   background-color: #ffd900;
+}
+#formulario {
+  background-color: #eee;
+  position: relative;
+}
+
+#formulario form {
+  background-color: #fff;
+  border-radius: 0.5em;
+  width: 40%;
+  height: 80%;
+  padding: 1em;
+  margin: 1em;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  box-shadow: 3px 3px 3px 3px #ddd;
+}
+#formulario form .inputs {
+  margin: 0.5em 0 1.5em 0;
+  width: 70%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#nombre,
+#precio,
+#categorias,
+#imagen {
+  padding: 0.5rem 0.5rem;
+  margin: 0;
+  width: 12rem;
+  border: 1px solid black;
+  border-radius: 5px;
+  text-align: center;
+}
+
+#botones {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+}
+
+#btn-reset,
+#btn-submit {
+  width: 8rem;
+}
+#btn-reset:hover,
+#btn-submit:hover {
+  transform: scale(1.1);
+  transition: 0.1s ease-in-out;
+}
+
+#btn-reset {
+  border: 1px solid black;
+  border-radius: 5px 0 0 5px;
+  background-color: #eee;
+  cursor: pointer;
+  padding: 0.5rem 1rem;
+  margin: 0;
+}
+
+#btn-submit {
+  background-color: #eee;
+  border: 1px solid black;
+  border-radius: 0 5px 5px 0;
+
+  cursor: pointer;
+  padding: 0.5rem 1rem;
+  margin: 0;
 }
