--- a/CSS/index.css
+++ b/CSS/index.css
@@ -149,13 +149,22 @@ body {
   justify-content: space-around;
 }
 
-#carrito button {
+#carrito #btn-comprar {
   position: absolute;
   bottom: 0;
   right: 0;
   width: 24%;
   margin: 0.4em;
   padding: 1em;
+}
+
+#quitar {
+  background-color: inherit;
+  border: none;
+  font-weight: bold;
+  padding: 0.5rem;
+  margin: 0;
+  cursor: pointer;
 }
 
 #total {
